--- a/net-mail/balsa/ChangeLog
+++ b/net-mail/balsa/ChangeLog
@@ -1,7 +1,11 @@
 # ChangeLog for net-mail/balsa
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/balsa/ChangeLog,v 1.5 2002/04/30 12:10:59 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/balsa/ChangeLog,v 1.6 2002/05/11 22:43:59 spider Exp $
 
+balsa-1.3.5-r1 (11 May 2002) 
+  11 May 2002; Spider <spider@gentoo.org> balsa-1.3.5-r1.ebuild :
+  fix bug with forgotten "install" in src_install stage 
+  
 *balsa-1.3.5 (30 Apr 2002)
 
   30 Apr 2002; Seemant Kulleen <seemant@gentoo.org> balsa-1.3.5.ebuild
