--- a/net-misc/host/ChangeLog
+++ b/net-misc/host/ChangeLog
@@ -1,9 +1,10 @@
-# ChangeLog for app-text/hd2u
+# ChangeLog for net-misc/host
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/host/ChangeLog,v 1.1 2002/05/11 18:40:29 george Exp $
+# Maintainer: George Shapovalov <george@gentoo.org>
+# $Header: /var/cvsroot/gentoo-x86/net-misc/host/ChangeLog,v 1.2 2002/05/12 04:49:35 george Exp $
 
 *host-991529,  (10 May 2002)
 
-  11 May 2002; G Shapovalov <george@gentoo.org> ChangeLog :
+  11 May 2002; G Shapovalov <george@gentoo.org> host-991529 :
 
   initial release
