--- a/net-misc/ez-ipupdate/ChangeLog
+++ b/net-misc/ez-ipupdate/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-misc/ez-ipupdate
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/ez-ipupdate/ChangeLog,v 1.2 2002/02/24 23:11:37 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/ez-ipupdate/ChangeLog,v 1.3 2002/05/12 10:18:22 bangert Exp $
+
+*ez-ipupdate-3.0.11_beta7 (08 May 2002)
+
+  08 May 2002; Thilo Bangert <bangert@gentoo.org> :
+
+  version bump - Added license
+
 
 *ez-ipupdate-3.0.11_beta6 (25 Feb 2002)
 
