--- a/app-editors/xemacs-packages-sumo/ChangeLog
+++ b/app-editors/xemacs-packages-sumo/ChangeLog
@@ -1,8 +1,15 @@
 # ChangeLog for app-editors/xemacs-packages-sumo
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-editors/xemacs-packages-sumo/ChangeLog,v 1.2 2002/04/01 16:32:20 agenkin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/xemacs-packages-sumo/ChangeLog,v 1.3 2002/05/25 05:57:51 agenkin Exp $
 
-*xemacs-packages-sumo-2002.03.29 (Feb 16, 2002)
+*xemacs-packages-sumo-2002.05.22 (May 25, 2002)
+
+  25 May 2002; Arcady Genkin <agenkin@thpoon.com>
+        xemacs-packages-sumo-2002.05.22.ebuild :
+  Newer version of the packages.
+
+
+*xemacs-packages-sumo-2002.03.29 (Apr 01, 2002)
 
   01 Apr 2002; Arcady Genkin <agenkin@thpoon.com>
         xemacs-packages-sumo-2002.03.29.ebuild :
