--- a/media-video/avifile/ChangeLog
+++ b/media-video/avifile/ChangeLog
@@ -1,6 +1,16 @@
 # ChangeLog for media-video/avifile
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-video/avifile/ChangeLog,v 1.12 2002/04/30 09:49:50 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/avifile/ChangeLog,v 1.13 2002/05/25 19:30:38 mkennedy Exp $
+
+*avifile-0.7.4-20020426 (25 May 2002)
+
+  25 May 2002; Matthew Kennedy <mkennedy@gentoo.org> avifile-0.7.4-20020426-r1.ebuild
+  files/digest-avifile-0.7.4-r1-20020426,
+  files/avifile-0.7.4.20020426-gcc3.1-gentoo.patch :
+
+  Fix avifile code to compile under gcc3.1. This will be an upstream
+  patch also. I'm masking this until gcc-.2.95.3 users verify that it
+  works for them too.
 
 *avifile-0.7.4-20020426 (20 Apr 2002)
 
