--- a/net-mail/balsa/ChangeLog
+++ b/net-mail/balsa/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-mail/balsa
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/balsa/ChangeLog,v 1.7 2002/05/14 08:05:52 woodchip Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/balsa/ChangeLog,v 1.8 2002/05/25 21:44:26 seemant Exp $
+
+*balsa-1.3.5-r2 (25 May 2002)
+
+  25 May 2002; Seemant Kulleen <seemant@gentoo.org> balsa-1.3.5-r2.ebuild
+  files/balsa-1.3.5-r2.diff files/digest-balsa-1.3.5-r2 :
+
+  Fixes submitted by: j_r_fonseca@yahoo.co.uk (Jose' Fonseca) in bug 2952
 
 balsa-1.3.5-r1 (11 May 2002) 
 
