--- a/app-misc/esms/Changelog
+++ b/app-misc/esms/Changelog
@@ -1,8 +1,11 @@
-# ChangeLog for app-misc/esms
+# ChangeLog for net-misc/esms
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/esms/Changelog,v 1.1 2002/05/14 19:26:51 bass Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/esms/Changelog,v 1.2 2002/05/26 00:56:14 bass Exp $
 
 *ems-0.95 (14 May 2002)
 
   14 May 2002; J.Alberto S.L. <bass@gentoo.org> ems-0.95.ebuild:
 	First relase.
+
+  16 May 2002; J.Alberto S.L. <bass@gentoo.org> ems-0.95.ebuild:
+  	Added gtk gui.
