--- a/net-www/galeon/ChangeLog
+++ b/net-www/galeon/ChangeLog
@@ -1,8 +1,18 @@
 # ChangeLog for net-www/galeon
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/galeon/ChangeLog,v 1.11 2002/05/24 07:16:44 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/galeon/ChangeLog,v 1.12 2002/05/26 08:45:24 rphillips Exp $
+
+*galeon-1.2.3 (26 May 2002)
+
+  26 May 2002; Ryan Phillips <rphillips@gentoo.org>
+
+  New release
 
 *galeon-1.2.2 (23 May 2002)
+
+  26 May 2002; Ryan Phillips <rphillips@gentoo.org>
+
+  Unmasked 1.2.2
 
   22 May 2002; Ryan Phillips <rphillips@gentoo.org>
 
