--- a/media-gfx/pixieplus-kde/ChangeLog
+++ b/media-gfx/pixieplus-kde/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for media-gfx/pixieplus-kde
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/pixieplus-kde/ChangeLog,v 1.2 2002/04/13 16:43:42 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/pixieplus-kde/ChangeLog,v 1.3 2002/05/26 09:57:08 mkennedy Exp $
+
+*pixieplus-kde-0.3_pre1 (26 May 2002)
+
+  26 May 2002; Matthew Kennedy <mkennedy@gentoo.org> ChangeLog,
+  pixieplus-kde-0.3-r1.ebuild, files/pixieplus-kde-0.3-r1,
+  files/pixieplus-kde-0.3-gcc31-gentoo.patch :
+
+  Code patch to get it working under gcc-3.1.
 
 *pixieplus-kde-0.3_pre1 (2 Apr 2002)
 
