--- a/gnome-extra/gal/ChangeLog
+++ b/gnome-extra/gal/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for gnome-extra/gal
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gal/ChangeLog,v 1.3 2002/05/13 22:10:07 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gal/ChangeLog,v 1.4 2002/05/26 15:14:56 azarah Exp $
+
+*gal-0.19.2-r1 (26 May 2002)
+
+  26 May 2002; Martin Schlemmer <azarah@gentoo.org> :
+
+  Fix DEPEND to properly depend on libglade-0.*.
 
 *gal-0.19.2 (13 May 2002)
 
