--- a/dev-java/blackdown-jdk/ChangeLog
+++ b/dev-java/blackdown-jdk/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for dev-java/blackdown-jdk
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-java/blackdown-jdk/ChangeLog,v 1.7 2002/04/27 12:18:39 pvdabeel Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/blackdown-jdk/ChangeLog,v 1.8 2002/05/26 20:04:17 karltk Exp $
+
+*blackdown-jdk-1.3.1-r6 (26 May 2002)
+
+  26 May 2002; Karl Trygve Kalleberg <karltk@gentoo.org> blackdown-jdk-1.3.1-r6.ebuild files/digest-blackdown-jdk-1.3.1-r6:
+
+  CLASSPATH pointed to jre's runtime library, fixed to point to jdk's instead.
+
+  Removed blackdown-jdk-1.3.1-r5.ebuild files/digest-blackdown-jdk-1.3.1-r5
 
 *blackdown-jdk-1.3.1-r5 (24 Apr 2002)
 
