--- a/dev-java/blackdown-jdk/files/blackdown-jdk-1.3.1
+++ b/dev-java/blackdown-jdk/files/blackdown-jdk-1.3.1
@@ -2,11 +2,11 @@
 # Distributed under the terms of the GNU General Public License, v2 or later
 # Author: Karl Trygve Kalleberg
 # Maintainer: Tools Team <tools@gentoo.org>
-# $Header: /var/cvsroot/gentoo-x86/dev-java/blackdown-jdk/files/blackdown-jdk-1.3.1,v 1.5 2002/04/24 18:56:22 karltk Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/blackdown-jdk/files/blackdown-jdk-1.3.1,v 1.6 2002/05/26 20:04:17 karltk Exp $
 
 VERSION="Blackdown JDK @PV@"
 JAVA_HOME=/opt/@P@
-CLASSPATH=/opt/@P@/lib/rt.jar
+CLASSPATH=/opt/@P@/jre/lib/rt.jar
 JDK_HOME=/opt/@P@
 JAVAC=${JAVA_HOME}/bin/javac
 ADDPATH="${JAVA_HOME}/bin:${JAVA_HOME}/jre/bin"
