--- a/app-cdr/gcombust/ChangeLog
+++ b/app-cdr/gcombust/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-cdr/gcombust
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/gcombust/ChangeLog,v 1.4 2002/05/24 10:46:06 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/gcombust/ChangeLog,v 1.5 2002/05/26 22:20:04 agenkin Exp $
+
+*gcombust-0.1.51 (26 May 2002)
+
+  26 May 2002; Arcady Genkin <agenkin@thpoon.com> gcombust-0.1.51.ebuild :
+
+  Update to 0.1.51.
 
 *gcombust-0.1.50-r1 (24 May 2002)
 
