--- a/dev-perl/gtk-perl/ChangeLog
+++ b/dev-perl/gtk-perl/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for dev-perl/gtk-perl
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/gtk-perl/ChangeLog,v 1.4 2002/05/06 17:41:44 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/gtk-perl/ChangeLog,v 1.5 2002/05/27 02:19:16 seemant Exp $
+
+*gtk-perl-0.7008-r4 (26 May 2002)
+
+  26 May 2002; Seemant Kulleen <seemant@gentoo.org>
+  gtk-perl-0.7008-r4.ebuild files/digest-gtk-perl-0.7008-r4 :
+
+  Added gdk-pixbuf as a dependency.  This closes bug #2946 reported by
+  pavel@md5.ca (pavel zaitsev) and fix submitted by: Ian Goldby
 
 *gtk-perl-0.7008-r3 (6 May 2002)
 
