--- a/app-emulation/xmame/ChangeLog
+++ b/app-emulation/xmame/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-games/xmame
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/xmame/ChangeLog,v 1.2 2002/03/28 06:50:41 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/xmame/ChangeLog,v 1.3 2002/05/27 08:35:15 rphillips Exp $
+
+*xmame-0.60.1 (27 May 2002)
+
+  27 May 2002; Ryan Phillips <rphillips@gentoo.org> xmame-0.60.1.ebuild :
+
+  Updated version and fixes to the xmame symlink.  #2958
 
 *xmame-0.59.1 (28 Mar 2002)
 
