--- a/gnome-extra/gnome-pilot/ChangeLog
+++ b/gnome-extra/gnome-pilot/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for gnome-extra/gnome-pilot
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-pilot/ChangeLog,v 1.5 2002/05/21 04:41:07 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-pilot/ChangeLog,v 1.6 2002/05/27 14:28:35 seemant Exp $
+
+*gnome-pilot-0.1.65-r2 (27 May 2002)
+
+  27 May 2002; Seemant Kulleen <seemant@gentoo.org>
+  gnome-pilot-0.1.65-r2.ebuild files/digest-gnome-pilot-0.1.65-r2 :
+
+  Added gnome-core as a dependency
 
 *gnome-pilot-0.1.65-r1 (20 May 2002)
 
