--- a/gnome-extra/gnome-pilot-conduits/ChangeLog
+++ b/gnome-extra/gnome-pilot-conduits/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for gnome-extra/gnome-pilot-conduits
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-pilot-conduits/ChangeLog,v 1.1 2002/02/01 21:53:29 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-pilot-conduits/ChangeLog,v 1.2 2002/05/27 15:23:45 seemant Exp $
+
+*gnome-pilot-conduits-0.9 (27 May 2002)
+
+  27 May 2002; Seemant Kulleen <seemant@gentoo.org>
+  gnome-pilot-conduits-0.9.ebuild files/digest-gnome-pilot-conduits-0.9 :
+
+  Version bump to work with the current gnome-pilot and pilot-link in
+  portage.  This closes bug # 3006 by fyre.fiend@verizon.net
 
 *gnome-pilot-conduits-0.8 (1 Feb 2002)
 
