--- a/gnome-base/ORBit/ChangeLog
+++ b/gnome-base/ORBit/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for gnome-base/ORBit
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/ORBit/ChangeLog,v 1.8 2002/04/13 08:24:20 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/ORBit/ChangeLog,v 1.9 2002/05/27 18:43:41 azarah Exp $
+
+*ORBit-0.5.16 (27 May 2002)
+
+  27 May 2002; MartinSchlemmer <azarah@gentoo.org> ORBit-0.5.16.ebuild :
+
+  Bump version.
 
 *ORBit-0.5.14-r2 (11 Apr 2002)
   11 Apr 2002; Spider <spider@gentoo.org> ORBit-0.5.14-r2.ebuild ORBit-0.5.14-r1.ebuild  ORBit-0.5.14.ebuild :
