--- a/net-www/links/ChangeLog
+++ b/net-www/links/ChangeLog
@@ -1,10 +1,16 @@
 # ChangeLog for net-www/links
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/links/ChangeLog,v 1.2 2002/05/26 15:07:58 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/links/ChangeLog,v 1.3 2002/05/27 22:24:43 azarah Exp $
+
+*links-2.0_pre4 (27 May 2002)
+
+  27 May 2002; Martin Schlemmer <azarah@gentoo.org> links-2.0_pre4.ebuild :
+
+  Version bump.
 
 *links-2.0_pre3 (26 May 2002)
 
-  26 May 2002; Seemant Kulleen <seemant@gentoo.org> links-2.0_pre3.ebuild
+  26 May 2002; Seemant Kulleen <seemant@gentoo.org> links-2.0_pre3.ebuild :
   files/digest-links-2.0_pre3 :
 
   Version bump thanks to kamisama@free.fr (Defresne Sylvain (keiichi)) in
