--- a/gnome-base/ORBit2/ChangeLog
+++ b/gnome-base/ORBit2/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for gnome-base/ORBit2
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/ORBit2/ChangeLog,v 1.2 2002/05/23 19:15:17 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/ORBit2/ChangeLog,v 1.3 2002/05/28 00:44:05 spider Exp $
+
+*ORBit2-2.4.0 (27 May 2002)
+  27 May 2002; Spider <spider@gentoo.org> ORBit2-2.4.0.ebuild :
+  Stable release!
+
 
 *ORBit2-2.3.110 (23 May 2002)
   23 May 2002; Spider <spider@gentoo.org> ORBit2-2.3.110.ebuild :
