--- a/gnome-base/bonobo-activation/ChangeLog
+++ b/gnome-base/bonobo-activation/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for gnome-base/bonobo-activation
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/bonobo-activation/ChangeLog,v 1.4 2002/06/02 00:10:39 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/bonobo-activation/ChangeLog,v 1.5 2002/06/04 08:59:03 blocke Exp $
+
+bonobo-activation-1.0.0-r1 (04 Jun 2002)
+
+  04 Jun 2002; Bruce A. Locke <blocke@shivan.org> bonobo-activation-1.0.0-r1.ebuild:
+
+  Converted to gnome2.eclass
 
 bonobo-activation-1.0.0 (1 Jun 2002)
   1 Jun 2002; Spider <spider@gentoo.org> bonobo-activation-1.0.0.ebuild :
