--- a/gnome-base/eel/ChangeLog
+++ b/gnome-base/eel/ChangeLog
@@ -1,7 +1,18 @@
 # ChangeLog for gnome-base/eel
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/eel/ChangeLog,v 1.7 2002/05/28 00:47:31 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/eel/ChangeLog,v 1.8 2002/06/04 09:16:28 blocke Exp $
 
+*eel-1.1.16-r1 (04 Jun 2002)
+
+  04 Jun 2002; Bruce A. Locke <blocke@shivan.org> eel-1.1.16-r1.ebuild:
+
+  Converted to gnome2.eclass
+
+*eel-1.0.2-r3 (04 Jun 2002)
+
+  04 Jun 2002; Bruce A. Locke <blocke@shivan.org> eel-1.0.2-r3.ebuild:
+
+  SLOTification and dependency update
 
 eel-1.1.16 (27 May 2002)
   27 May 2002; Spider <spider@gentoo.org> eel-1.1.16.ebuild: 
