--- a/gnome-base/gail/ChangeLog
+++ b/gnome-base/gail/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for gnome-base/gail
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gail/ChangeLog,v 1.1 2002/05/22 20:56:36 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gail/ChangeLog,v 1.2 2002/06/04 09:24:44 blocke Exp $
+
+*gail-0.13-r1 (04 Jun 2002)
+
+  04 Jun 2002; Bruce A. Locke <blocke@shivan.org> gail-0.13-r1.ebuild:
+
+  Converted to gnome2.eclass
 
 *gail-0.13 (22 May 2002)
   22 May 2002; Spider <spider@gentoo.org>  gail-0.13.ebuild :
