--- a/net-misc/fags/ChangeLog
+++ b/net-misc/fags/ChangeLog
@@ -1,8 +1,15 @@
 # ChangeLog for net-misc/fags
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/fags/ChangeLog,v 1.1 2002/05/21 06:18:23 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/fags/ChangeLog,v 1.2 2002/06/04 10:49:49 seemant Exp $
 
-*net-misc/fags-0.1.5 (20 May 2002)
+*fags-0.1.9 (4 Jun 2002)
+
+  4 Jun 2002; Seemant Kulleen <seemant@gentoo.org> fags-0.1.9.ebuild
+  files/digest-fags-0.1.9 :
+
+  Version bump.
+
+*fags-0.1.5 (20 May 2002)
 
   20 May 2002; Seemant Kulleen <seemant@gentoo.org> fags-0.1.5.ebuild
   files/digest-fags-0.1.5 :
