--- a/net-misc/dc-gui/ChangeLog
+++ b/net-misc/dc-gui/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-misc/dc-gui
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/dc-gui/ChangeLog,v 1.3 2002/04/25 06:26:48 mkennedy Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/dc-gui/ChangeLog,v 1.4 2002/06/04 11:09:59 seemant Exp $
+
+*dc-gui-0.57 (4 Jun 2002)
+
+  4 Jun 2002; Seemant Kulleen <seemant@gentoo.org> dc-gui-0.57.ebuild
+  files/digest-dc-gui-0.57 :
+
+  Version bump, and changed gnome dep to gnome-libs instead.
 
 *dc-gui-0.54 (24 Apr 2002)
 
