--- a/net-misc/dc-gui/ChangeLog
+++ b/net-misc/dc-gui/ChangeLog
@@ -1,13 +1,14 @@
 # ChangeLog for net-misc/dc-gui
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/dc-gui/ChangeLog,v 1.4 2002/06/04 11:09:59 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/dc-gui/ChangeLog,v 1.5 2002/06/04 11:10:31 seemant Exp $
 
 *dc-gui-0.57 (4 Jun 2002)
 
   4 Jun 2002; Seemant Kulleen <seemant@gentoo.org> dc-gui-0.57.ebuild
   files/digest-dc-gui-0.57 :
 
-  Version bump, and changed gnome dep to gnome-libs instead.
+  Version bump, and changed gnome dep to gnome-libs instead.  Thanks to Todd
+  in bug # 3143.
 
 *dc-gui-0.54 (24 Apr 2002)
 
