--- a/app-admin/gentoolkit/ChangeLog
+++ b/app-admin/gentoolkit/ChangeLog
@@ -1,12 +1,14 @@
 # ChangeLog for app-admin/gentoolkit
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-admin/gentoolkit/ChangeLog,v 1.16 2002/06/03 21:59:22 karltk Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/gentoolkit/ChangeLog,v 1.17 2002/06/04 22:48:30 karltk Exp $
 
 *gentoolkit-0.1.10-r1 (04 Jun 2002)
 
   04 Jun 2002; Karl Trygve Kalleberg <karltk@gentoo.org> gentoolkit-0.1.10-r1.ebuild files/digest-gentoolkit-0.1.10-r1:
 
   etc-update now considers all dirs listed in /etc/make.globals' CONFIG_PROTECT.
+
+  pkg-size now handles very large packages, and packages that have files with space in their names.
 
   Removed gentoolkit-0.1.10.ebuild files/digest-gentoolkit-0.1.10
 
