--- a/app-office/siag/ChangeLog
+++ b/app-office/siag/ChangeLog
@@ -1,6 +1,20 @@
 # ChangeLog for app-office/siag
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-office/siag/ChangeLog,v 1.1 2002/02/01 21:53:09 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/siag/ChangeLog,v 1.2 2002/06/05 05:07:34 lostlogic Exp $
+
+*siag-3.5.2 (5 Jun 2002)
+
+  5 Jun 2002; G.Bevin <lostlogic@gentoo.org> ChangeLog : siag-3.5.2.ebuild
+
+  Updated version, no type 1 font support for now, causes problems for some people.
+  This version is significantly updated from 3.4.7, read the ChangeLog on the siag
+  site for more information.
+
+  Changed install patch from /opt to /usr
+
+  Added dependencies on mowitz and tcl
+
+  Removed USE="guile" portion
 
 *siag-3.4.7 (1 Feb 2002)
 
