--- a/gnome-extra/gal2/ChangeLog
+++ b/gnome-extra/gal2/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/gal2
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gal2/ChangeLog,v 1.1 2002/05/23 00:46:16 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gal2/ChangeLog,v 1.2 2002/06/05 14:20:23 stroke Exp $
+
+*gal2-0.0.4 (5 June 2002)
+  5 June 2002; Gabriele Giorgetti <stroke@gentoo.org> gal2-0.0.4.ebuild:
+  new version
 
 *gal2-0.0.3 (22 May 2002)
   22 May 2002; Spider <spider@gentoo.org> gal2-0.0.3.ebuild: 
