--- a/x11-libs/libzvt/ChangeLog
+++ b/x11-libs/libzvt/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-libs/libzvt
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libzvt/ChangeLog,v 1.3 2002/05/30 23:26:20 blocke Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libzvt/ChangeLog,v 1.4 2002/06/05 14:33:37 stroke Exp $
+
+*libzvt-1.117.0 (05 June 2002)
+  
+  05 Jun 2002; Gabriele Giorgetti <stroke@gentoo.org> libzvt-1.117.0.ebuild:
+  
+  New version
 
 *libzvt-1.116.1 (30 May 2002)
 
