--- a/app-admin/portagemaster/ChangeLog
+++ b/app-admin/portagemaster/ChangeLog
@@ -1,7 +1,13 @@
 # ChangeLog for app-admin/portagemaster
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-admin/portagemaster/ChangeLog,v 1.1 2002/06/05 06:45:36 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/portagemaster/ChangeLog,v 1.2 2002/06/05 15:44:49 rphillips Exp $
 
+*portagemaster-0.1.4-r1 (5 June 2002)
+  
+  5 June 2002; Ryan Phillips <rphillips@gentoo.org> portagemaster-0.1.4-r1.ebuild :
+
+  Ebuild fixes.... My bad. Fixes #3404
+  
 *portagemaster-0.1.4 (4 June 2002)
 
   4 June 2002; Ryan Phillips <rphillips@gentoo.org> ChangeLog :
