--- a/gnome-base/control-center/ChangeLog
+++ b/gnome-base/control-center/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for gnome-base/control-center
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/control-center/ChangeLog,v 1.8 2002/06/04 08:49:11 blocke Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/control-center/ChangeLog,v 1.9 2002/06/05 16:18:02 spider Exp $
+
+
+*control-center-1.4.0.5-r1 (05 Jun 2002) 
+  05 Jun 2002; Spider <spider@gentoo.org> ; control-center-1.4.0.5-r1.ebuild :
+  fix up dependencies
+
 
 
 *control-center-1.99.10-r1 (04 Jun 2002)
