--- a/gnome-extra/libgtkhtml/ChangeLog
+++ b/gnome-extra/libgtkhtml/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for gnome-extra/libgtkhtml
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgtkhtml/ChangeLog,v 1.2 2002/05/28 01:09:51 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgtkhtml/ChangeLog,v 1.3 2002/06/05 16:51:23 spider Exp $
+
+*libgtkhtml-1.99.9 (05 Jun 2002)
+  05 Jun 2002; Spider <spider@gentoo.org> libgtkhtml-1.99.9.ebuild:
+  New eclass based ebuild and version
+
 
 *libgtkhtml-1.99.8 (27 May 2002)
   27 May 2002; Spider <spider@gentoo.org> libgtkhtml-1.99.8.ebuild:
