--- a/net-im/ickle/ChangeLog
+++ b/net-im/ickle/ChangeLog
@@ -1,10 +1,14 @@
 # ChangeLog for net-im/ickle
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-im/ickle/ChangeLog,v 1.4 2002/04/27 07:16:49 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/ickle/ChangeLog,v 1.5 2002/06/05 19:37:12 spider Exp $
 
+ickle-0.3.1 (05 Jun 2002)
+  05 Jun 2002; Spider <spider@gentoo.org> :
+  Change dependencies to work with gtk-- 1.3 series and gnome stuff as well as libsigc++
 
+  
 *ickle-0.3.1 (27 Apr 2002)
-27 Apr 2002; Spider <spider@gentoo.org> ickle-0.3.1.ebuild :
+  27 Apr 2002; Spider <spider@gentoo.org> ickle-0.3.1.ebuild :
   update to latest version
 
 *ickle-0.3.0-r1 (18 Apr 2002)
