--- a/app-cdr/cdbakeoven/ChangeLog
+++ b/app-cdr/cdbakeoven/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-cdr/cdbakeoven
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdbakeoven/ChangeLog,v 1.1 2002/02/01 21:53:00 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdbakeoven/ChangeLog,v 1.2 2002/06/05 20:10:53 danarmak Exp $
+
+*cdbakeoven-1.8.9 (5 Jun 2002)
+
+  5 Jun 2002; Dan Armak <danarmak@gentoo.org> changelog:
+  
+  New upstream version, first kde3 version.
 
 *cdbakeoven-1.8 (1 Feb 2002)
 
