--- a/sys-apps/acpid/ChangeLog
+++ b/sys-apps/acpid/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/acpid
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/acpid/ChangeLog,v 1.2 2002/05/21 20:54:03 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/acpid/ChangeLog,v 1.3 2002/06/13 18:43:55 azarah Exp $
+
+  11 Jun 2002; Martin Schlemmer <azarah@gentoo.org> :
+
+  Fix kernel virtual .. should not be versioned.
 
 *acpid-1.0.1 (21 May 2002)
 
