--- a/gnome-extra/gnomemm/ChangeLog
+++ b/gnome-extra/gnomemm/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/gnomemm
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnomemm/ChangeLog,v 1.3 2002/06/04 02:51:34 lostlogic Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnomemm/ChangeLog,v 1.4 2002/06/14 01:48:22 spider Exp $
+
+*gnomemm-1.2.2-r3 (13 Jun 2002)
+  13 Jun 2002; Spider <spider@gentoo.org> gnomemm-1.2.2-r3.ebuild
+  new revision that fixes dependency borkage with gnome2
 
 *gnomemm-1.2.2-r2 (3 Jun 2002)
 
