--- a/app-misc/krusader/ChangeLog
+++ b/app-misc/krusader/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/krusader
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-misc/krusader/ChangeLog,v 1.3 2002/06/10 18:20:19 wmertens Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/krusader/ChangeLog,v 1.4 2002/06/14 13:22:30 danarmak Exp $
+
+*krusader-1.0.3_beta1-r1 (14 Jun 2002)
+
+  14 Jun 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :
+
+  Fix bug #3728 - wrong ${P}
 
 *krusader-1.03_beta1 (10 Jun 2002)
 
