--- a/net-misc/nload/ChangeLog
+++ b/net-misc/nload/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for net-misc/nload
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/nload/ChangeLog,v 1.1 2002/02/01 21:53:35 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/nload/ChangeLog,v 1.2 2002/06/14 19:38:19 nitro Exp $
+
+
+*nload-0.4.0 (14 Jun 2002)
+
+  14 Jun 2002; Kyle Manna <nitro@gentoo.org> nload-0.4.0.ebuild :
+  
+  Verion bump, ebuild update.
+
 
 *nload-0.3.0 (1 Feb 2002)
 
