--- a/net-mail/gotmail/ChangeLog
+++ b/net-mail/gotmail/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-mail/gotmail
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/gotmail/ChangeLog,v 1.3 2002/06/07 02:34:09 woodchip Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/gotmail/ChangeLog,v 1.4 2002/06/14 21:15:48 g2boojum Exp $
+
+*gotmail-0.7.1-r1 (14 Jun 2002)
+
+  14 Jun 2002; Grant Goodyear <g2boojum@gentoo.org> ChangeLog  :
+
+  Added dev-perl/libnet as a dependency
 
 *gotmail-0.7.1 (6 Jun 2002)
 
