--- a/media-gfx/gphoto/ChangeLog
+++ b/media-gfx/gphoto/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for media-gfx/gphoto
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gphoto/ChangeLog,v 1.3 2002/03/17 22:20:46 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gphoto/ChangeLog,v 1.4 2002/06/15 04:13:05 mkennedy Exp $
+
+*gphoto-0.4.3-r2 (12 June 2002)
+
+  12 June 2002; Matthew Kennedy <mkennedy@gentoo.org>
+  files/digest-gphoto-0.4.3-r2,
+  files/gphoto-0.4.3-sony-command.c-gentoo.patch,
+  gphoto-0.4.3-r2.ebuild, ChangeLog :
+
+  Fixed broken gphoto code so this actually compiles.
 
 *gphoto-2.0-r1 (16 March 2002)
 
