--- a/gnome-extra/gal2/ChangeLog
+++ b/gnome-extra/gal2/ChangeLog
@@ -1,7 +1,13 @@
 # ChangeLog for gnome-extra/gal2
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gal2/ChangeLog,v 1.2 2002/06/05 14:20:23 stroke Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gal2/ChangeLog,v 1.3 2002/06/15 13:00:25 spider Exp $
 
+
+gal2-0.0.4-r1 (15 June 2002)
+  15 Jun 2002 ; Spider <spider@gentoo.org> gal2-0.0.4-r1.ebuild :
+  eclassify
+  add dependencies
+  
 *gal2-0.0.4 (5 June 2002)
   5 June 2002; Gabriele Giorgetti <stroke@gentoo.org> gal2-0.0.4.ebuild:
   new version
