--- a/x11-terms/multi-gnome-terminal/ChangeLog
+++ b/x11-terms/multi-gnome-terminal/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-terms/multi-gnome-terminal
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-terms/multi-gnome-terminal/ChangeLog,v 1.7 2002/06/10 06:28:39 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-terms/multi-gnome-terminal/ChangeLog,v 1.8 2002/06/16 03:09:37 stroke Exp $
+
+*multi-gnome-terminal-1.5.0 (16 Jun 2002)
+
+  16 Jun 2002; Gabriele Giorgetti <stroke@gentoo.org> :
+
+  Version update. Removed 1.5.0_rcs.
 
 *multi-gnome-terminal-1.5.0_rc4 (10 Jun 2002)
 
