--- a/dev-java/sun-j2ee/ChangeLog
+++ b/dev-java/sun-j2ee/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/sun-j2ee
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-j2ee/ChangeLog,v 1.1 2002/02/01 21:53:11 gbevin Exp $
+# /space/gentoo/cvsroot/gentoo-x86/dev-java/sun-j2ee/ChangeLog,v 1.1 2002/02/01 21:53:11 gbevin Exp
+
+*sun-j2ee-1.3.1 (16 Jun 2002)
+
+  16 Jun 2002; Doug Goldstein (Cardoe) <dougg@ufl.edu> sun-j2ee-1.3.1.ebuild:
+  
+  Corrected ebuild with lintool and a quick version bump
 
 *sun-j2ee-1.3 (1 Feb 2002)
 
