--- a/dev-db/postgresql/ChangeLog
+++ b/dev-db/postgresql/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-db/postgresql
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql/ChangeLog,v 1.9 2002/06/14 20:13:23 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql/ChangeLog,v 1.10 2002/06/17 04:05:39 rphillips Exp $
+
+*postgresql-7.2.1 (16 Jun 2002)
+
+  16 Jun 2002; Ryan Phillips <rphillips@gentoo.org> postgresql-7.2.1.ebuild :
+
+  Doesn't check for java version if java is *not* in the USE vars.
 
 *postgresql-7.2.1 (14 Jun 2002)
 
