--- a/net-mail/sylpheed/ChangeLog
+++ b/net-mail/sylpheed/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-mail/sylpheed
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/sylpheed/ChangeLog,v 1.8 2002/06/10 01:07:29 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/sylpheed/ChangeLog,v 1.9 2002/06/17 05:15:39 seemant Exp $
+
+*sylpheed-0.7.8 (16 Jun 2002)
+
+  16 Jun 2002; Seemant Kulleen <seemant@gentoo.org> sylpheed-0.7.8.ebuild
+  files/digest-sylpheed-0.7.8 :
+
+  Version bump.
 
 *sylpheed-0.7.7-r1 (09 Jun 2002)
   
