--- a/net-libs/nss_ldap/ChangeLog
+++ b/net-libs/nss_ldap/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for net-libs/nss_ldap
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-libs/nss_ldap/ChangeLog,v 1.2 2002/04/18 16:30:27 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/nss_ldap/ChangeLog,v 1.3 2002/06/17 06:11:34 seemant Exp $
+
+*nss_ldap-174-r2 (16 Jun 2002)
+
+  16 Jun 2002; Seemant Kulleen <seemant@gentoo.org> nss_ldap-r2.ebuild
+  files/digest-nss_ldap-r2 :
+
+  Added two configure options, thanks to: Ssrit@larvalstage.net (Jerry
+  Haltom) in bug #3427
 
 *nss_ldap-174-r1 (18 Apr 2002)
 
