--- a/net-analyzer/netleds_applet/ChangeLog
+++ b/net-analyzer/netleds_applet/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-analyzer/netleds_applet
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/netleds_applet/ChangeLog,v 1.2 2002/04/25 01:00:13 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/netleds_applet/ChangeLog,v 1.3 2002/06/17 06:19:41 seemant Exp $
+
+*netleds_applet-0.9.1-r3 (16 Jun 2002)
+
+  16 Jun 2002; Seemant Kulleen <seemant@gentoo.org>
+  netleds_applet-0.9.1-r3.ebuild files/digest-netleds_applet-0.9.1-r3 :
+
+  sandbox fix, cont'd
 
 *netleds_applet-0.9.1-r2 (24 Apr 2002)
 
