--- a/dev-ruby/rexml/ChangeLog
+++ b/dev-ruby/rexml/ChangeLog
@@ -1,7 +1,13 @@
 # ChangeLog for dev-ruby/rexml
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rexml/ChangeLog,v 1.1 2002/04/13 20:44:49 karltk Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rexml/ChangeLog,v 1.2 2002/06/17 08:17:41 rphillips Exp $
 
+*rexml-2.3.5 (17 Jun 2002)
+
+  17 Jun 2002; Ryan Phillips <rphillips@gentoo.org> rexml-1.2.5 files/digest-rexml-1.2.5 :
+
+  Updated package revision. Fixes #3799
+  
 *rexml-1.2.4 (13 Apr 2002)
 
   13 Apr 2002; Karl Trygve Kalleberg <karltk@gentoo.org> rexml-1.2.4 files/digest-rexml-1.2.4 :
