--- a/app-text/rcs/ChangeLog
+++ b/app-text/rcs/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for app-text/rcs
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-text/rcs/ChangeLog,v 1.1 2002/02/01 21:53:10 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/rcs/ChangeLog,v 1.2 2002/06/17 16:49:09 naz Exp $
+
+*rcs-5.7-r2 (16 Jun 2002)
+  
+  16 Feb 2002; Michael Nazaroff <naz@gentoo.org) rcs-5.7-r2:
+
+  Added a one line fix.. that hopefully makes conf.sh script to no fail like it
+  was.  I don't seem to have problems either way on my machine.  So I'm not sure
+  about the exact problem with this ebuild.
 
 *rcs-5.7-r1 (1 Feb 2002)
 
