--- a/gnome-extra/battstat/ChangeLog
+++ b/gnome-extra/battstat/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for gnome-extra/battstat
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/battstat/ChangeLog,v 1.4 2002/06/11 00:38:41 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/battstat/ChangeLog,v 1.5 2002/06/17 16:57:27 stroke Exp $
+
+*battstat-2.0.13 (17 Jun 2002)
+
+  17 Jun 2002; Gabriele Giorgetti <stroke@gentoo.org> ChangeLog :
+  
+  Version bump, patch added, updated dependencies.
+  Thanks again to hanno@gmx.de (Hanno Boeck) bug #3617
+
 
 *battstat-2.0.11 (10 Jun 2002)
 
