--- a/app-admin/kportagemaster/ChangeLog
+++ b/app-admin/kportagemaster/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-admin/kportagemaster
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-admin/kportagemaster/ChangeLog,v 1.2 2002/06/15 19:47:02 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/kportagemaster/ChangeLog,v 1.3 2002/06/17 18:42:52 danarmak Exp $
+
+  17 Jun 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :
+
+  Add dep on kde-base/kdebase - kportagemaster needs kdesu. Close bug #3758
+  (again).
 
 *kportagemaster-0.2 (15 Jun 2002)
 
