--- a/sys-apps/pam-login/ChangeLog
+++ b/sys-apps/pam-login/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/pam-login
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pam-login/ChangeLog,v 1.2 2002/05/26 10:34:12 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pam-login/ChangeLog,v 1.3 2002/06/17 19:34:19 azarah Exp $
+
+*pam-login-3.6-r2 (17 Jun 2002)
+
+  17 Jun 2002; Martin Schlemmer <azarah@gentoo.org> :
+
+  Add ENV_SUPATH support.  Should close bugs #3147, #3643.
 
 *pam-login-3.6 (26 May 2002)
 
