--- a/app-misc/ksensors/ChangeLog
+++ b/app-misc/ksensors/ChangeLog
@@ -1,9 +1,10 @@
 # ChangeLog for app-misc/ksensors
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-misc/ksensors/ChangeLog,v 1.1 2002/06/13 19:05:29 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/ksensors/ChangeLog,v 1.2 2002/06/17 20:08:13 danarmak Exp $
 
 *ksensors-0.7 (13 Jun 2002)
 
   13 Jun 2002; Dan Armak <danarmak@gentoo.org> changelog:
   
-  User submission, close #2458.
+  User submission by Michael v. Ostheim (original) and later by
+  Francisco Gimeno, close #2458.
