--- a/gnome-extra/libglademm/ChangeLog
+++ b/gnome-extra/libglademm/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for gnome-extra/libglademm
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libglademm/ChangeLog,v 1.1 2002/06/02 17:24:26 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libglademm/ChangeLog,v 1.2 2002/06/17 23:32:45 spider Exp $
+
+
+*libglademm-1.3.1 (17 Jun 2002)
+  17 Jun 2002; Spider <spider@gentoo.org> ChangeLog libglademm-1.3.1.ebuild :
+  version bump
+
 
 *libglademm-1.3.0 (02 Jun 2002)
   02 Jun 2002; Spider <spider@gentoo.org> ChangeLog libglademm-1.3.0.ebuild :
