--- a/gnome-extra/libgnomemm/ChangeLog
+++ b/gnome-extra/libgnomemm/ChangeLog
@@ -1,7 +1,11 @@
 # ChangeLog for gnome-extra/libgnomemm
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgnomemm/ChangeLog,v 1.1 2002/06/02 17:25:40 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgnomemm/ChangeLog,v 1.2 2002/06/17 23:22:56 spider Exp $
 
+*libgnomemm-1.3.4 (17 Jun 2002)
+  17 Jun 2002 ;Spider <spider@gentoo.org> libgnomemm-1.3.4.ebuild :
+  new version
+  
 *libgnomemm-1.3.3 (02 Jun 2002)
   02 Jun 2002; Spider <spider@gentoo.org> ChangeLog libgnomemm-1.3.3.ebuild :
   gnome2.eclass version of foser <foser@sesmar.eu.org> gnome-c++
