--- a/gnome-extra/libgnomeuimm/ChangeLog
+++ b/gnome-extra/libgnomeuimm/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for gnome-extra/libgnomeuimm
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgnomeuimm/ChangeLog,v 1.1 2002/06/02 17:26:13 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgnomeuimm/ChangeLog,v 1.2 2002/06/17 23:29:48 spider Exp $
+
+*libgnomeui-1.3.6 (17 Jun 2002)
+  17 Jun 2002; Spider <spider@gentoo.org> libgnomeui-1.3.6.ebuild :
+  version bump
+
+    
 
 *libgnomeuimm-1.3.5 (02 Jun 2002)
   02 Jun 2002; Spider <spider@gentoo.org> ChangeLog libgnomeuimm-1.3.5.ebuild :
